# PSIN

./: CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
data/: Lu203_480x832.npy  Lu203_960x1664.mat
data/field/: README.md
data/sample/: synthetic_section.npz
docs/: code_availability_statement.md  compute_requirements.md  data_availability.md  tutorial.md  user_guide.md
scripts/: generate_synthetic_data.py  operator_evolution.py  run_demo.py  train_field_data.py
src/psin/: __init__.py  io.py  model.py  wavelet.py
