[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psin"
version = "0.1.0"
description = "Physics-informed self-supervised ISTA-unrolled network for sparse spike deconvolution"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Yun-Peng Shi"},
  {name = "Fan Min"},
  {name = "Chang-Zhong Wang"}
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "matplotlib>=3.6",
  "torch>=2.0",
  "tqdm>=4.64"
]

[tool.setuptools.packages.find]
where = ["src"]
